# pandas-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01-getting-started.ipynb  02-basics.ipynb  03-indexes.ipynb  04-filtering.ipynb  05-updating-rows-and-columns.ipynb  06-add-remove-rows.ipynb  07-sorting.ipynb  08-grouping-aggregating.ipynb  side_notes.ipynb
